--- a/app/css/calculator.css
+++ b/app/css/calculator.css
@@ -53,3 +53,17 @@ body {
     width: 100%;
     margin-top: 22px;
 }
+
+.ctaTingle .calculatedPrice {
+    display: block;
+    position: absolute;
+    top: 0;
+    padding: 1em 0;
+    width: 100%;
+    color: var(--fontWhite);
+    background-color: var(--deepThird);
+}
+
+.ctaTingle .calculatedPrice span {
+    font-weight: 800;
+}
